# rekapundi

./: .gitignore  Cargo.toml  Dockerfile  openapi.yml
.github/workflows/: test.yml
.sqlx/: query-075f0274abb0c2d5e2de04040188c566b22d6d0a83be2f5229b17ac06385aca7.json  query-0db8426c04b5db38cbc7e916ccfad15f4ea0eeb53ffcb587f629ff1e648eba2e.json  query-120656a8ef6b1d86081be92f420acc389956d64e52a9d3791440638feda91b28.json  query-35b9393330223902f0384a796036f1836f0055281536965accd012aaabead168.json  query-3893ece1f2c31a72f92e6ab50098a1e32e5aa79eb9036ff3fab3d2a706439c48.json  query-46cd7ec8e591c56a2847c11379150528bbcefe67de51bc3fddb1baa91d780b7a.json  query-4a0fa5fb950b2d9be16316ff2ebc0f70f90aa97cda0dcd0750c75ad419e79040.json  query-55f4e6e576c6531362bd1cfa182fb342ab1df84c26efcd01db534d8842b85251.json  query-6e413b84075f01c219842f4ba9ea9dcd1947e19435af105508e0af7cfa36f517.json  query-73efc5354d4c7dcc95ee2af8ee7731dfed7ca5456cca3121082888eaaca16d22.json  query-77954bcfd5f662b47baca67555b7191e6a2df4ae28b2ef02c86b9e6b2a3de422.json  query-78336cbfa30769adb46db11333ee45da5044cd014eff019743b546173f8678fc.json  query-9c482432ce8614ef80785bd7155116a24f8e1206d05783f848e7d7fcf64f1b4f.json  query-bafa624914b37751240df6e708920ee4fd8e1a70d2ae51736e72a01c0be14264.json  query-c31f58191f33356ee0f40446626b01c62d3d7ba0cee1c4cf10b3e5f3c14be2cd.json  query-c9aa0517a46201e430fcc44099fb43cc6d671f49d1e729c85d63b8c674538fa9.json  query-cc94d9bc1b4142a82fd776709d01355012e3026c84baa7431ce0a55ca29263c0.json  query-d2c38869e6a41e2ce237560741262a700162c928f67440f1733b88afefc82ac6.json  query-dc6205e0df97b7fb5b3b69bc8b0264945a08d88a99b7921efee1250f632d25fd.json  query-dfc28c0d28371b0b43596a99ceb3ccc04d927f2a6303da1317239fe1ba7ac351.json  query-e8f5971eb3599ea57ec7b28fd07a1e3a782790d75ab43282fd403bc40dbbee38.json  query-ed75158fd0f12cc7117970fdb23ac04fbd4f4fbb67b0c50c44d501724b248ce5.json
migrations/: 20250401103804_create-update-updated-at-column-function.down.sql  20250401103804_create-update-updated-at-column-function.up.sql  20250401103805_create-tag-table.down.sql  20250401103805_create-tag-table.up.sql  20250401103806_create-wallet-table.down.sql  20250401103806_create-wallet-table.up.sql  20250401103807_create-parent-category-table.down.sql  20250401103807_create-parent-category-table.up.sql  20250401103808_create-category-table.down.sql  20250401103808_create-category-table.up.sql  20250401103809_create-expense-table.down.sql  20250401103809_create-expense-table.up.sql  20250401103810_create-expense-tag-table.down.sql  20250401103810_create-expense-tag-table.up.sql  20250401103811_create-income-table.down.sql  20250401103811_create-income-table.up.sql  20250401103812_create-wallet-transfer-table.down.sql  20250401103812_create-wallet-transfer-table.up.sql
src/: constants.rs  main.rs
(+28 files in other folders)
