[package]
authors = ["Daniel Osvaldo Rahmanto <daniel.rahmanto@gmail.com>"]
edition = "2024"
license = "MIT"
name = "rekapundi"
repository = "https:/github.com/Tango992/rekapundi"
version = "0.2.2"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
axum-extra = "0.10.1"
charming = "0.4.0"
jsonwebtoken = { version = "9", default-features = false }
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["json", "postgres", "runtime-tokio", "time", "tls-native-tls"] }
time = { version = "0.3.41", features = ["parsing", "serde"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serial_test = "*"
tower = "0.5.2"
